# organization_backend_py

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  app.py  finish.sh  log  onrender_requirements.txt  pyproject.toml  requirements.txt  start.sh  start_app.sh  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: github-actions-demo.yml
app/: app.py
app/src/: __init__.py
app/src/models/: attendance.py  position.py  staff.py
scripts/: build.sh  run_dev_env.sh  run_tests.sh
src/: __init__.py
src/datastore/: __init__.py  record_operations.py
src/models/: __init__.py  attendance.py  attendance_model.py  class_rank_model.py  comment.py  comment_model.py  event.py  event_model.py  player.py  player_model.py  position.py  role.py  role_model.py  staff.py  staff_model.py  user.py  user_model.py
src/service/: constants.py  routes.py
src/service/attendance/: __init__.py  controller.py  views.py
src/service/auth/: __init__.py  queries.py  token.py  views.py
src/service/comment/: __init__.py  controller.py  views.py
src/service/common/: __init__.py  views.py
src/service/controller/: query_resolver.py
src/service/events/: __init__.py  controller.py  queries.py  views.py
src/service/graphql/: query.py  schema.graphql
src/service/positions/: controller.py  views.py
src/service/queries/: __init__.py  attendance_queries.py  comment_queries.py  event_queries.py  role_queries.py  user_queries.py
src/service/roles/: __init__.py  controller.py  queries.py  views.py
src/service/user/: controller.py  queries.py  views.py
(+15 files in other folders)
