[tool.poetry]
name = "organization_backend_py"
version = "0.1.0"
description = "Antaly Vandals organization dashboard backend"
authors = ["Artem Sliusarenko <sliusarenko.artem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.1"
Flask-Cors = "3.0.10"
flask-sqlalchemy = "3.0.0"
Flask-JWT-Extended = "4.4.4"
mysql-connector-python = "8.0.30"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
